test/sh/error/func/param_bad_type.sk
external f(x: Int)

x := false

f(x)
